# beef

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/: deploy-gh-pages.sh
.github/workflows/: docs.yml  publish-to-pypi.yml
beef/: __init__.py  examples.py  general.py  io.py  modal.py  newmark.py  nlfe2d.py  nlfe2d_merge_test.py  plot.py  quat.py  rotation.py  vispy_test.py
beef/fe/: __init__.py  _analysis.py  _constraint.py  _eldef.py  _element.py  _features.py  _load.py  _node.py  _plotters.py  _section.py  _step.py  analysis.py  constraint.py  eldef.py  element.py  features.py  force.py  node.py  plotters.py  results.py  section.py  step.py
beef/feobj/: __init__.py  _analysis.py  _eldef.py  _element.py  _features.py  _node.py  _plotters.py  _section.py  _step.py
beef/tests/: test_3d.py  test_node.py
docs/: Gemfile  _config.yml  build.sh  index.md  licensing.rst  requirements.txt
docs/_posts/: 2022-10-10-welcome-to-jekyll.markdown
docs/source/: code.rst  conf.py  examples.rst  index.rst  installation.rst
docs/templates/: logo.mako
examples/: 2021-06-03-kak-beef-example.ipynb  Applying constraints and features.ipynb  Static analysis of frame in 3D.ipynb  Static and dynamic analysis of frame in 3D.ipynb  Three-dimensional beam biting its root.ipynb  Two-dimensional beam biting its root.ipynb
examples/.ipynb_checkpoints/: 2021-06-03-kak-beef-example-checkpoint.ipynb  2022-01-20-kak-beef-example_3d-checkpoint.ipynb  2022-05-09-kak-beef-features-checkpoint.ipynb  Static analysis of frame in 3D-checkpoint.ipynb  (+3 more)
(+8 files in other folders)
